# Kairos

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  requirements-server.txt  start.sh  validate.py
kairos/: __init__.py  engine.py
kairos/engines/: __init__.py  base.py  double_pendulum.py  lorenz.py  reaction_diffusion.py
kairos/entropy/: __init__.py  health.py  mixer.py  perturbation.py  pool.py
kairos/server/: main.py  routes.py  websocket.py
ml/: ML_SUMMARY.md  __init__.py  collect_data.py  eda.py  generate_metrics_report.py  inference.py  model1_anomaly.py  model2_predictor.py  model4_classifier.py
ml/models/: model1_scaler.json  model2_norm.json
src/: App.tsx  index.css
src/components/: EntropyHealth.tsx  Lorenz.tsx  Pendulum.tsx  ReactionDiff.tsx  SeedParameters.tsx  TokenGenerator.tsx
src/hooks/: useKairosSocket.ts
tests/: test_engines.py  test_health.py  test_perturbation.py  test_pool.py
