[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos-entropy"
version = "0.1.0"
description = "Chaos-driven entropy engine for secure token generation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "cryptography>=41.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
kairos-server = "kairos.server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["kairos"]
